pull request learning

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, sed!</p>
 <p>This is feature1</p>
+<p>wanted to learn pull request</p>
